Agregar jquery y mensaje no encontrado

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,3 +2,9 @@
 .container{
     padding: 10px;
 }
+button.showMe.button.back-button{
+    display: block !important;
+}
+.hidden{
+    display: none;
+}
